--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: "SMAC Project Website"
 url: "http://www.smacproject.org"
 
 paginate: 5
+paginate_path: "/blog/page:num/"
 
 markdown: redcarpet
 permalink: pretty
