Added picture on author line; updated blog post.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,6 +18,7 @@ marco:
 jianing:
     name: Jianing Liu
     web: http://www.smacproject.org/people/
+    email: jianing.liu@vanderbilt.edu
 
 zeke:
     name: Zeke
@@ -26,8 +27,9 @@ zeke:
 yasmin:
     name: Yasmin Alvarado Rayo
     web: http://www.smacproject.org/people/
+    email: yasmin.alvarado-rayo@vanderbilt.edu
 
 ashley:
     name: Ashley Peck
     web: http://www.smacproject.org/people/
-
+    email: ashley.m.peck@vanderbilt.edu
